--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <img id="image" src="1.gif" alt="">
     <img id="image" src="2.gif" alt="">
     <section id="music">
-      <audio src="bensound-acousticbreeze.mp3" controls autoplay></audio>
+      <audio src="bensound-acousticbreeze.mp3" controls autoplay loop></audio>
     </section>
 
     <h1>Merry Christmas</h1>
